// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should match the snapshot - menu 1`] = `
<header
  class="nhsuk-header nhsuk-header--organisation"
  data-testid="header"
  role="banner"
>
  <div
    class="nhsuk-width-container nhsuk-header__container"
  >
    <div
      class="nhsuk-header__logo"
    >
      <a
        aria-label="Anytown Anyplace Anywhere NHS Foundation Trust homepage"
        class="nhsuk-header__link"
      >
        <svg
          class="nhsuk-logo"
          height="40"
          viewBox="0 0 40 16"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="nhsuk-logo__background"
            d="M0 0h40v16H0z"
            fill="#005eb8"
          />
          <path
            class="nhsuk-logo__text"
            d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            fill="#fff"
          />
        </svg>
        <span
          class="nhsuk-organisation-name"
        >
          Anytown Anyplace
          <span
            class="nhsuk-organisation-name-split"
          >
            Anywhere
          </span>
        </span>
        <span
          class="nhsuk-organisation-descriptor"
        >
          NHS Foundation Trust
        </span>
      </a>
    </div>
    <div
      class="nhsuk-header__content"
      id="content-header"
    >
      <div
        class="nhsuk-header__menu"
      >
        <button
          aria-expanded="false"
          aria-label="Open menu"
          class="nhsuk-header__menu-toggle"
          data-testid="menu-toggle"
        >
          Menu
        </button>
      </div>
    </div>
  </div>
  <nav
    aria-label="Primary navigation"
    aria-labelledby="label-navigation"
    class="nhsuk-header__navigation"
    role="navigation"
  >
    <div
      class="nhsuk-width-container"
    >
      <p
        class="nhsuk-header__navigation-title"
      >
        <span
          id="label-navigation"
        >
          Menu
        </span>
        <button
          class="nhsuk-header__navigation-close"
          id="close-menu"
        >
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__close"
            focusable="false"
            height="27"
            viewBox="0 0 24 24"
            width="27"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
            />
          </svg>
          <span
            class="nhsuk-u-visually-hidden"
          >
            Close menu
          </span>
        </button>
      </p>
      <ul
        class="nhsuk-header__navigation-list"
      >
        <li
          class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            Home
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            Get involved
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            About us
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            About us
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Header > should match the snapshot - search 1`] = `
<header
  class="nhsuk-header nhsuk-header--organisation"
  data-testid="header"
  role="banner"
>
  <div
    class="nhsuk-width-container nhsuk-header__container"
  >
    <div
      class="nhsuk-header__logo"
    >
      <a
        aria-label="Anytown Anyplace Anywhere NHS Foundation Trust homepage"
        class="nhsuk-header__link"
      >
        <svg
          class="nhsuk-logo"
          height="40"
          viewBox="0 0 40 16"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="nhsuk-logo__background"
            d="M0 0h40v16H0z"
            fill="#005eb8"
          />
          <path
            class="nhsuk-logo__text"
            d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            fill="#fff"
          />
        </svg>
        <span
          class="nhsuk-organisation-name"
        >
          Anytown Anyplace
          <span
            class="nhsuk-organisation-name-split"
          >
            Anywhere
          </span>
        </span>
        <span
          class="nhsuk-organisation-descriptor"
        >
          NHS Foundation Trust
        </span>
      </a>
    </div>
    <div
      class="nhsuk-header__content"
      id="content-header"
    >
      <div
        class="nhsuk-header__menu"
      >
        <button
          aria-expanded="false"
          aria-label="Open menu"
          class="nhsuk-header__menu-toggle"
        >
          Menu
        </button>
      </div>
      <div
        class="nhsuk-header__search"
      >
        <button
          class="nhsuk-header__search-toggle"
          data-testid="search-toggle"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Search
          </span>
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__search"
            focusable="false"
            height="34"
            viewBox="0 0 24 24"
            width="34"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z"
            />
          </svg>
        </button>
        <div
          class="nhsuk-header__search-wrap"
        >
          <form
            action="/search"
            class="nhsuk-header__search-form"
            method="get"
            role="search"
          >
            <label
              class="nhsuk-u-visually-hidden"
              for="search-field"
            >
              Search
            </label>
            <input
              autocomplete="off"
              class="nhsuk-search__input"
              data-testid="search"
              id="search-field"
              placeholder="Search"
              type="search"
            />
            <button
              aria-label="Submit search"
              class="nhsuk-search__submit"
              type="submit"
            >
              <svg
                aria-hidden="true"
                class="nhsuk-icon nhsuk-icon__search"
                focusable="false"
                height="34"
                viewBox="0 0 24 24"
                width="34"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z"
                />
              </svg>
            </button>
            <button
              class="nhsuk-search__close"
              data-testid="search-close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="nhsuk-icon nhsuk-icon__close"
                focusable="false"
                height="27"
                viewBox="0 0 24 24"
                width="27"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
                />
              </svg>
              <span
                class="nhsuk-u-visually-hidden"
              >
                Close search
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
  <nav
    aria-label="Primary navigation"
    aria-labelledby="label-navigation"
    class="nhsuk-header__navigation"
    role="navigation"
  >
    <div
      class="nhsuk-width-container"
    >
      <p
        class="nhsuk-header__navigation-title"
      >
        <span
          id="label-navigation"
        >
          Menu
        </span>
        <button
          class="nhsuk-header__navigation-close"
          id="close-menu"
        >
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__close"
            focusable="false"
            height="27"
            viewBox="0 0 24 24"
            width="27"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
            />
          </svg>
          <span
            class="nhsuk-u-visually-hidden"
          >
            Close menu
          </span>
        </button>
      </p>
      <ul
        class="nhsuk-header__navigation-list"
      >
        <li
          class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            Home
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            Get involved
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            About us
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            About us
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Header > should match the snapshot - service 1`] = `
<header
  class="nhsuk-header"
  data-testid="header"
  role="banner"
>
  <div
    class="nhsuk-width-container nhsuk-header__container"
  >
    <div
      class="nhsuk-header__logo"
    >
      <a
        aria-label="NHS homepage"
        class="nhsuk-header__link nhsuk-header__link--service"
      >
        <svg
          class="nhsuk-logo"
          height="40"
          viewBox="0 0 40 16"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="nhsuk-logo__background"
            d="M0 0h40v16H0z"
            fill="#005eb8"
          />
          <path
            class="nhsuk-logo__text"
            d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            fill="#fff"
          />
        </svg>
        <span
          class="nhsuk-header__service-name"
        >
          Service name
        </span>
      </a>
    </div>
    <div
      class="nhsuk-header__content"
      id="content-header"
    >
      <div
        class="nhsuk-header__search"
      >
        <button
          class="nhsuk-header__search-toggle"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Search
          </span>
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__search"
            focusable="false"
            height="34"
            viewBox="0 0 24 24"
            width="34"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z"
            />
          </svg>
        </button>
        <div
          class="nhsuk-header__search-wrap"
        >
          <form
            action="/search"
            class="nhsuk-header__search-form"
            method="get"
            role="search"
          >
            <label
              class="nhsuk-u-visually-hidden"
              for="search-field"
            >
              Search
            </label>
            <input
              autocomplete="off"
              class="nhsuk-search__input"
              id="search-field"
              placeholder="Search"
              type="search"
            />
            <button
              aria-label="Submit search"
              class="nhsuk-search__submit"
              type="submit"
            >
              <svg
                aria-hidden="true"
                class="nhsuk-icon nhsuk-icon__search"
                focusable="false"
                height="34"
                viewBox="0 0 24 24"
                width="34"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z"
                />
              </svg>
            </button>
            <button
              class="nhsuk-search__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="nhsuk-icon nhsuk-icon__close"
                focusable="false"
                height="27"
                viewBox="0 0 24 24"
                width="27"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
                />
              </svg>
              <span
                class="nhsuk-u-visually-hidden"
              >
                Close search
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header > should match the snapshot - transactional 1`] = `
<header
  class="nhsuk-header nhsuk-header--transactional"
  data-testid="header"
  role="banner"
>
  <div
    class="nhsuk-width-container nhsuk-header__container"
  >
    <div
      class="nhsuk-header__logo nhsuk-header__logo--only"
    >
      <a
        aria-label="NHS homepage"
        class="nhsuk-header__link nhsuk-header__link--service"
      >
        <svg
          class="nhsuk-logo"
          height="40"
          viewBox="0 0 40 16"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="nhsuk-logo__background"
            d="M0 0h40v16H0z"
            fill="#005eb8"
          />
          <path
            class="nhsuk-logo__text"
            d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            fill="#fff"
          />
        </svg>
      </a>
    </div>
    <div
      class="nhsuk-header__transactional-service-name"
    >
      <a
        class="nhsuk-header__transactional-service-name--link"
      >
        Service name
      </a>
    </div>
  </div>
</header>
`;

exports[`Header > should match the snapshot - white equal false 1`] = `
<header
  class="nhsuk-header nhsuk-header--organisation"
  data-testid="header"
  role="banner"
>
  <div
    class="nhsuk-width-container nhsuk-header__container"
  >
    <div
      class="nhsuk-header__logo"
    >
      <a
        aria-label="Anytown Anyplace Anywhere NHS Foundation Trust homepage"
        class="nhsuk-header__link"
      >
        <svg
          class="nhsuk-logo"
          height="40"
          viewBox="0 0 40 16"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="nhsuk-logo__background"
            d="M0 0h40v16H0z"
            fill="#005eb8"
          />
          <path
            class="nhsuk-logo__text"
            d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            fill="#fff"
          />
        </svg>
        <span
          class="nhsuk-organisation-name"
        >
          Anytown Anyplace
          <span
            class="nhsuk-organisation-name-split"
          >
            Anywhere
          </span>
        </span>
        <span
          class="nhsuk-organisation-descriptor"
        >
          NHS Foundation Trust
        </span>
      </a>
    </div>
    <div
      class="nhsuk-header__content"
      id="content-header"
    >
      <div
        class="nhsuk-header__menu"
      >
        <button
          aria-expanded="false"
          aria-label="Open menu"
          class="nhsuk-header__menu-toggle"
        >
          Menu
        </button>
      </div>
    </div>
  </div>
  <nav
    aria-label="Primary navigation"
    aria-labelledby="label-navigation"
    class="nhsuk-header__navigation"
    role="navigation"
  >
    <div
      class="nhsuk-width-container"
    >
      <p
        class="nhsuk-header__navigation-title"
      >
        <span
          id="label-navigation"
        >
          Menu
        </span>
        <button
          class="nhsuk-header__navigation-close"
          id="close-menu"
        >
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__close"
            focusable="false"
            height="27"
            viewBox="0 0 24 24"
            width="27"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
            />
          </svg>
          <span
            class="nhsuk-u-visually-hidden"
          >
            Close menu
          </span>
        </button>
      </p>
      <ul
        class="nhsuk-header__navigation-list"
      >
        <li
          class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            Home
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            Get involved
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            About us
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            About us
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;

exports[`Header > should match the snapshot - white equal true 1`] = `
<header
  class="nhsuk-header nhsuk-header--organisation nhsuk-header--white"
  data-testid="header"
  role="banner"
>
  <div
    class="nhsuk-width-container nhsuk-header__container"
  >
    <div
      class="nhsuk-header__logo"
    >
      <a
        aria-label="Anytown Anyplace Anywhere NHS Foundation Trust homepage"
        class="nhsuk-header__link"
      >
        <svg
          class="nhsuk-logo"
          height="40"
          viewBox="0 0 40 16"
          width="100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="nhsuk-logo__background"
            d="M0 0h40v16H0z"
            fill="#005eb8"
          />
          <path
            class="nhsuk-logo__text"
            d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"
            fill="#fff"
          />
        </svg>
        <span
          class="nhsuk-organisation-name"
        >
          Anytown Anyplace
          <span
            class="nhsuk-organisation-name-split"
          >
            Anywhere
          </span>
        </span>
        <span
          class="nhsuk-organisation-descriptor"
        >
          NHS Foundation Trust
        </span>
      </a>
    </div>
    <div
      class="nhsuk-header__content"
      id="content-header"
    >
      <div
        class="nhsuk-header__menu"
      >
        <button
          aria-expanded="false"
          aria-label="Open menu"
          class="nhsuk-header__menu-toggle"
        >
          Menu
        </button>
      </div>
    </div>
  </div>
  <nav
    aria-label="Primary navigation"
    aria-labelledby="label-navigation"
    class="nhsuk-header__navigation"
    role="navigation"
  >
    <div
      class="nhsuk-width-container"
    >
      <p
        class="nhsuk-header__navigation-title"
      >
        <span
          id="label-navigation"
        >
          Menu
        </span>
        <button
          class="nhsuk-header__navigation-close"
          id="close-menu"
        >
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__close"
            focusable="false"
            height="27"
            viewBox="0 0 24 24"
            width="27"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.41 12l5.3-5.29a1 1 0 1 0-1.42-1.42L12 10.59l-5.29-5.3a1 1 0 0 0-1.42 1.42l5.3 5.29-5.3 5.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l5.29-5.3 5.29 5.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z"
            />
          </svg>
          <span
            class="nhsuk-u-visually-hidden"
          >
            Close menu
          </span>
        </button>
      </p>
      <ul
        class="nhsuk-header__navigation-list"
      >
        <li
          class="nhsuk-header__navigation-item nhsuk-header__navigation-item--for-mobile"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            Home
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            Get involved
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            About us
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
        <li
          class="nhsuk-header__navigation-item"
        >
          <a
            class="nhsuk-header__navigation-link"
            href="#"
          >
            About us
            <svg
              aria-hidden="true"
              class="nhsuk-icon nhsuk-icon__chevron-right"
              height="34"
              viewBox="0 0 24 24"
              width="34"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 12a1 1 0 0 1-.29.71l-5 5a1 1 0 0 1-1.42-1.42l4.3-4.29-4.3-4.29a1 1 0 0 1 1.42-1.42l5 5a1 1 0 0 1 .29.71z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</header>
`;
